// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with Default & show/hide Animation correctly 1`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with Default & show/hide Animation correctly 2`] = `
Object {
  "dialogState": "opening",
}
`;

exports[`should render with Default & show/hide Animation correctly 3`] = `
Object {
  "dialogState": "opened",
}
`;

exports[`should render with Default & show/hide Animation correctly 4`] = `
Object {
  "dialogState": "closing",
}
`;

exports[`should render with Default & show/hide Animation correctly 5`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 1`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 2`] = `
Object {
  "dialogState": "opening",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 3`] = `
Object {
  "dialogState": "opened",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 4`] = `
Object {
  "dialogState": "closing",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 5`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 1`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 2`] = `
Object {
  "dialogState": "opening",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 3`] = `
Object {
  "dialogState": "opened",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 4`] = `
Object {
  "dialogState": "closing",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 5`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 1`] = `
Object {
  "dialogState": "closed",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 2`] = `
Object {
  "dialogState": "opening",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 3`] = `
Object {
  "dialogState": "opened",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 4`] = `
Object {
  "dialogState": "closing",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 5`] = `
Object {
  "dialogState": "closed",
}
`;
